infrastructure/k8s/networking/deny-all-but-dns-egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-but-dns-egress
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
